[#13] refactor: 환경변수 설정, DB 연결 service로직으로 변경